# warm-start-model

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  fid_results.csv  fid_results_2025-09-05_19-38_vibrant_fish_e2e.csv  fid_results_2025-12-21_18-30_delightful_lion.csv  fid_results_2025-12-28_22-39_witty_bear.csv  fid_results_2025-12-28_22-39_witty_bear_e2e.csv  fid_results_context_strenghts.csv  fid_results_new_warmth_scaling_end_to_end4.csv  fid_results_old_warmth_scaling_no_blend.csv  fid_results_warmth_1_1_ablation.csv  fid_results_warmth_1_1_ablation_3_8m.csv  pyproject.toml  submit.sh
.github/workflows/: default.yaml
_normalisation/: cifar10_normalisation.npz
src/cdnp/: evaluate.py  task.py  train.py
src/cdnp/data/: afhq.py  celeba.py  cifar10.py  data.py  era5.py  mnist.py
src/cdnp/model/: cdnp.py  cdnp_inverted.py  cnp.py  convnet.py  ctx.py  ddpm.py  ema.py  i2sb.py  low_rank_cov.py  noise_scheduler.py  unet.py  util.py  warm_start_diffusion.py
src/cdnp/plot/: geoplot.py  plotter.py
src/cdnp/sampler/: dpm_solver.py
src/cdnp/task/: ccgen.py  inpainting.py
src/cdnp/util/: config_filter.py  explore.py  instantiate.py
src/config/: afhq_inpaint_fm.yaml  afhq_superresolution_cnp.yaml  afhq_superresolution_fm.yaml  afhq_superresolution_fm_warm.yaml  base.yaml  celeba_inpaint.yaml  celeba_inpaint_cdnp.yaml  celeba_inpaint_cnp.yaml  celeba_inpaint_fm.yaml  celeba_inpaint_fm_warm.yaml  cifar10_ablation_feature_only.yaml  cifar10_ablation_mean_only.yaml  cifar10_ccd.yaml  cifar10_ccgen.yaml  cifar10_colourisation_cnp.yaml  cifar10_colourisation_fm.yaml  cifar10_colourisation_fm_warm.yaml  cifar10_imgen.yaml  cifar10_imgen_fm.yaml  cifar10_imgen_fm_warm.yaml  cifar10_inpaint.yaml  cifar10_inpaint_cdnp.yaml  cifar10_inpaint_cnp.yaml  cifar10_inpaint_cnp_0_100.yaml  cifar10_inpaint_cnp_correlated.yaml  cifar10_inpaint_fm.yaml  cifar10_inpaint_fm_0_100.yaml  cifar10_inpaint_fm_warm.yaml  cifar10_inpaint_fm_warm_0_100.yaml  cifar10_inpaint_i2sb.yaml  config.py  era5_forecast_cdnp.yaml  era5_forecast_cnp.yaml  era5_full_forecast_cnp.yaml  era5_full_forecast_fm.yaml  era5_full_forecast_fm_warm.yaml  era5_wind_forecast_cdnp.yaml  era5_wind_forecast_cnp.yaml  era5_wind_forecast_fm.yaml  era5_wind_forecast_fm_warm.yaml  (+8 more)
src/config/data/: afhq.yaml  celeba.yaml  cifar10.yaml  era5.yaml  era5_full.yaml  era5_wind.yaml  mnist.yaml
src/config/generative_model/: flow_matching.yaml  flow_matching_no_attention.yaml
src/config/mode/: dev.yaml  prod.yaml
src/config/model/: cdnp.yaml  cnp.yaml  ddpm.yaml  flow_matching.yaml  flow_matching_no_attention.yaml  i2sb.yaml  warm_start.yaml  warm_start_fm.yaml  (+1 more)
src/explore/: average_dog.py  celeba.py  checkpoint.py  compute_fid.py  config_filters.py  data_distribution.py  edit_checkpoint.py  end2end.py  end_to_end.py  fid.py  fid_vs_nfe.py  find_hardest.py  generate_samples.py  hurricane.py  mnist_diffusion_model.py  nfe_progression.py  normalisation.py  param_count.py  plot_context_strengths.py  plots.py  reparameterisation.py  time_forward_pass.py  weather_eval.py  weather_eval_plots.py
src/scaffolding_v3/: evaluate.py  train.py
tests/: test_cfg.py  test_inpainting.py  test_low_rank_cov.py  test_noise_scheduler.py  test_train.py
tests/integration/: test_training.py
(+48 files in other folders)
