[project]
name = "cdnp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Jonas Scholz", email = "jonas.scholz123@gmail.com" }]
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.2",
    "wandb>=0.17.5",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "ruff>=0.9.4",
    "ty==0.0.1a6",
    "pre-commit>=4.2.0",
    "mlbnb>=0.1.1",
    "diffusers>=0.33.1",
    "accelerate>=1.7.0",
    "gdown>=5.2.0",
    "xarray",
    "numcodecs[crc32c]>=0.16.1",
    "zarr>=3.0.8",
    "einops>=0.8.1",
    "cartopy>=0.24.1",
    "h5netcdf>=1.6.1",
    "torcheval>=0.0.7",
]
requires-python = ">=3.11.0"
readme = "README.md"
license = { text = "MIT" }

[tool.ty.src]
root = "./src"
