[project]
name = "cdnp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Jonas Scholz", email = "jonas.scholz123@gmail.com" }]
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.2",
    "wandb>=0.17.5",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "ruff>=0.9.4",
    "pre-commit>=4.2.0",
    "diffusers>=0.33.1",
    "accelerate>=1.7.0",
    "gdown>=5.2.0",
    "xarray",
    "numcodecs[crc32c]>=0.16.1",
    "zarr>=3.0.8",
    "einops>=0.8.1",
    "cartopy>=0.24.1",
    "h5netcdf>=1.6.1",
    "torchdiffeq>=0.2.5",
    "torchmetrics[image]>=1.7.4",
    "mlbnb==0.1.3",
    "ty>=0.0.1a16",
    "datasets>=4.4.1",
    "seaborn>=0.13.2",
]
requires-python = ">=3.11.0"
readme = "README.md"
license = { text = "MIT" }

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
exclude = ["src/cdnp/model/meta", "src/explore", "src/cdnp/model/flow_matching"]

[tool.ruff]
exclude = ["src/cdnp/model/meta", "src/explore", "src/cdnp/model/flow_matching"]
ignore = ["E741", "E731"]

[tool.ty.rules]
unresolved-attribute = "ignore"
non-subscriptable = "ignore"
unsupported-operator = "ignore"
